@@ -12,7 +12,7 @@ binaries that this assembler produces are often slightly smaller and
 run in fewer cycles than binaries produced by other assemblers given
 the same source assembly.
 
-This assembler also supports the DAT/DATA, BRK, JMP, RESERVE/.DS,
+This assembler also supports the DAT/DATA, BRK, JMP, BRA, RESERVE/.DS,
 TIMES/DUP, .INCBIN, and .INCLUDE meta-instructions that work on all
 DCPU-16 implementations, and it allows the user to specify custom new
 non-basic opcode instructions for use with supporting DCPU-16
@@ -47,9 +47,12 @@ automatically be replaced by `ADD PC, delta` or `SUB PC, delta` if it
 is found that those instructions would be shorter. If optimizations
 are enabled (which they are by default), then all eligible uses of
 `SET PC, value` in the source file will also be considered for this
-optimization. If generating position independent code is enabled (off
-by default), then JMP instructions will only be compiled to ADD or SUB
-instructions.
+optimization.
+
+The BRA instruction is like the JMP instruction, except it only ever
+compiles to the `ADD PC, delta` or `SUB PC, delta` forms. This
+instruction is used for making position independent code such that the
+binary can be loaded into any address and executed from there.
 
 The RESERVE or .DS instruction takes one integer argument specifying
 how many words of zeroes to reserve in memory at its location. `.DS 3`
@@ -157,11 +160,9 @@ The -h/--help option can be given to show the usage instructions and
 list of options, and the --no-optimizations option can be given to
 disable all automatic optimizations while compiling.
 
-The -p/--pic option can be passed to enable generating
-position-independent code. This changes JMP instructions to only be
-compiled to `ADD PC, delta` or `SUB PC, delta` instructions, so that
-the binary can be loaded at any address and executed from there. (This
-setting does not affect `SET PC, value` instructions!)
+The -p/--pic option causes all JMP instructions to be interpreted as
+BRA instructions. Note that this option does not affect instructions
+of the form `SET PC, value`.
 
 This assembler support writing its binaries in both little endian and
 big endian format. The assembler defaults to little endian format. The
